# ocaml-exercises

./: .ocamlformat  LICENSE  dune-project  problems.opam
lib/: dune  lists.ml
test/: dune  test_lists.ml
