(lang dune 3.17)

(name problems)

(generate_opam_files true)

(source
 (github maximlysenko/ocaml-exercises))

(authors "Maksym Lysenko addition.mail.address@gmail.com>")

(license LICENSE)

(package
 (name problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
